header icons fixed with correct colors in both light and dark mode

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -28,7 +28,7 @@ header button {
   }
 
   &:nth-of-type(1)::after {
-    background: url("./icons/person.svg");
+    background: url("./icons/person_light.svg");
   }
 
   &:nth-of-type(2)::after {
@@ -45,6 +45,25 @@ header button {
 
   &.open {
     box-shadow: $medium_inner;
+  }
+}
+
+.darkmode header button,
+.dark4ever header button {
+  &:nth-of-type(1)::after {
+    background: url("./icons/person_dark.svg");
+  }
+
+  &:nth-of-type(2)::after {
+    background: url("./icons/order_dark.svg");
+  }
+
+  &:nth-of-type(3)::after {
+    background: url("./icons/beer_dark.svg");
+  }
+
+  &:nth-of-type(4)::after {
+    background: url("./icons/chart_dark.svg");
   }
 }
 
